<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/product_list_item_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/product_list_item_image_image_view"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            tools:background="@color/colorPrimary" />

        <TextView
            android:id="@+id/product_list_item_title_text_view"
            style="@style/H2BoldTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_list_item_image_image_view"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:maxLines="1"
            android:text="@string/products_name_test" />

        <TextView
            android:id="@+id/product_list_item_price_text_text_view"
            style="@style/H2TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/product_list_item_title_text_view"
            android:layout_alignStart="@id/product_list_item_title_text_view"
            android:layout_below="@id/product_list_item_title_text_view"
            android:layout_marginTop="8dp"
            android:text="@string/price" />

        <TextView
            android:id="@+id/product_list_item_price_text_view"
            style="@style/H2TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/product_list_item_price_text_text_view"
            android:layout_marginLeft="@dimen/price_space"
            android:layout_marginStart="@dimen/price_space"
            android:layout_toEndOf="@+id/product_list_item_price_text_text_view"
            android:layout_toRightOf="@+id/product_list_item_price_text_text_view"
            android:text="@string/product_price" />

        <TextView
            style="@style/H2TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/product_list_item_price_text_text_view"
            android:layout_marginLeft="@dimen/price_space"
            android:layout_marginStart="@dimen/price_space"
            android:layout_toEndOf="@+id/product_list_item_price_text_view"
            android:layout_toRightOf="@+id/product_list_item_price_text_view"
            android:text="@string/currency" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_list_item_price_text_text_view"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="8dp">

            <Button
                android:id="@+id/product_list_item_to_basket_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/to_basket"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/product_list_item_to_favorite_image_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:src="@drawable/ic_favorite"
                tools:tint="@color/colorNotInFavoriteRed" />

        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>