<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/basket_list_item_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/basket_list_item_image_image_view"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="8dp"
            android:background="@color/colorWhite"
            tools:background="@color/colorGray" />

        <TextView
            android:id="@+id/basket_list_item_title_text_view"
            style="@style/H2BoldTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/basket_list_item_image_image_view"
            android:layout_toEndOf="@id/basket_list_item_image_image_view"
            android:layout_toLeftOf="@id/basket_list_item_delete_image_view"
            android:layout_toRightOf="@id/basket_list_item_image_image_view"
            android:layout_toStartOf="@id/basket_list_item_delete_image_view"
            android:maxLines="1"
            android:text="@string/products_name_test" />

        <ImageView
            android:id="@+id/basket_list_item_delete_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/basket_list_item_image_image_view"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/ic_delete"
            android:tint="@color/colorPrimary" />

        <TextView
            android:id="@+id/basket_list_item_price_text_text_view"
            style="@style/H2TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/basket_list_item_title_text_view"
            android:layout_alignStart="@id/basket_list_item_title_text_view"
            android:layout_below="@id/basket_list_item_title_text_view"
            android:layout_marginEnd="@dimen/price_space"
            android:layout_marginRight="@dimen/price_space"
            android:layout_marginTop="8dp"
            android:text="@string/price" />

        <TextView
            android:id="@+id/basket_list_item_price_text_view"
            style="@style/H2TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/basket_list_item_price_text_text_view"
            android:layout_marginEnd="@dimen/price_space"
            android:layout_marginRight="@dimen/price_space"
            android:layout_toEndOf="@id/basket_list_item_price_text_text_view"
            android:layout_toRightOf="@id/basket_list_item_price_text_text_view"
            android:text="@string/product_price" />

        <TextView
            style="@style/H2TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/basket_list_item_price_text_text_view"
            android:layout_toEndOf="@id/basket_list_item_price_text_view"
            android:layout_toRightOf="@id/basket_list_item_price_text_view"
            android:text="@string/currency" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/basket_list_item_image_image_view"
            android:layout_alignLeft="@id/basket_list_item_title_text_view"
            android:layout_alignStart="@id/basket_list_item_title_text_view"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp">

            <ImageView
                android:id="@+id/basket_list_item_plus_image_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_add"
                android:tint="@color/colorPrimary" />

            <TextView
                android:id="@+id/basket_list_item_counter_text_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/counter_test"
                android:textColor="@android:color/black"
                android:textSize="25sp" />

            <ImageView
                android:id="@+id/basket_list_item_minus_image_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_remove"
                android:tint="@color/colorPrimary" />

        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>