<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="8dp"
    android:background="@color/colorWhite">

    <ScrollView
        android:id="@+id/product_detail_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/product_detail_title_text_view"
                style="@style/H1TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                tools:text="Test Title" />

            <ImageView
                android:id="@+id/product_detail_image_image_view"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@+id/product_detail_title_text_view"
                android:layout_marginTop="8dp"
                tools:background="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/product_detail_price_text_text_view"
                style="@style/H2TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/product_detail_image_image_view"
                android:layout_alignStart="@id/product_detail_image_image_view"
                android:layout_below="@id/product_detail_image_image_view"
                android:layout_marginEnd="@dimen/price_space"
                android:layout_marginRight="@dimen/price_space"
                android:layout_marginTop="8dp"
                android:text="@string/price" />

            <TextView
                android:id="@+id/product_detail_price_text_view"
                style="@style/H2TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/product_detail_price_text_text_view"
                android:layout_marginEnd="@dimen/price_space"
                android:layout_marginRight="@dimen/price_space"
                android:layout_toEndOf="@+id/product_detail_price_text_text_view"
                android:layout_toRightOf="@+id/product_detail_price_text_text_view"
                tools:text="@string/product_price" />

            <TextView
                style="@style/H2TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/product_detail_price_text_text_view"
                android:layout_toEndOf="@+id/product_detail_price_text_view"
                android:layout_toRightOf="@+id/product_detail_price_text_view"
                android:text="@string/currency" />

            <TextView
                android:id="@+id/product_detail_quantity_text_view"
                style="@style/H2TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/product_detail_price_text_view"
                android:layout_alignEnd="@id/product_detail_image_image_view"
                android:layout_alignRight="@id/product_detail_image_image_view"
                tools:text="@string/quantity_yes" />

            <LinearLayout
                android:id="@+id/product_detail_image_buttons_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/product_detail_image_image_view"
                android:layout_alignLeft="@id/product_detail_image_image_view"
                android:layout_alignRight="@id/product_detail_image_image_view"
                android:layout_alignStart="@id/product_detail_image_image_view"
                android:layout_below="@+id/product_detail_price_text_text_view"
                android:layout_marginTop="8dp">

                <Button
                    android:id="@+id/product_detail_to_basket_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/to_basket"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/product_detail_to_favorite_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:src="@drawable/ic_favorite"
                    tools:tint="@color/colorNotInFavoriteRed" />

            </LinearLayout>

            <TextView
                android:id="@+id/product_detail_description_text_view"
                style="@style/H3TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/product_detail_image_image_view"
                android:layout_alignLeft="@id/product_detail_image_image_view"
                android:layout_alignRight="@id/product_detail_image_image_view"
                android:layout_alignStart="@id/product_detail_image_image_view"
                android:layout_below="@+id/product_detail_image_buttons_linear_layout"
                android:layout_centerInParent="true"
                android:layout_marginTop="8dp"
                tools:text="@string/arduino_uno_description" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
